<resources>
    <string name="app_name">downSyndromeUI</string>

    <!--General Usage -->
    <string name="bckBtn">Back</string>

    <!--lOGIN SCREEN -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remeberme">Remeber me</string>


    <!-- REGISTER SCREEN -->
    <string name="Title">Please fill in your childs information</string>
    <string name="name"> Name</string>
    <string name="surname">Surname</string>
    <string name="usernameRegister">Username</string>
    <string name="age">Age</string>
    <string name="Password">Password</string>
    <string name="rePassword">Re - enter password</string>
    <string name="titleParent">Please fill in your information</string>
    <string name="email">Email</string>
    <string name="nameParent">Name</string>
    <string name="surnameParent">Surname</string>
    <string name="cancelTitle">Cancel</string>
    <string name="submitTitle">Submit</string>

    <!-- DASHBOARD SCREEN -->

    <string name="titleLearn">What would you like to learn today</string>
    <string name="titleTests">Here are some tests that you can take</string>
    <string name="galleryTitle">Open family album</string>
    <string name="LogOut">Settings</string>
    <string name="Settings">Log Out</string>

    <!-- Image caption values -->

    <string name="colorsandshapes">Colours and Shapes</string>
    <string name="animals">Animals</string>
    <string name="pronouns">Pronouns</string>
    <string name="sentences">Sentences</string>
    <string name="numbers">Numbers</string>
    <string name="Science">Science</string>
    <string name="words">Words</string>
    <string name="PlaceHolder">Placeholder</string>
    <string name="lifeskills">Life Skills</string>
    <string name="Puzzless">Puzzles</string>


    <!--Settings screen -->

    <string name ="settingdtitile" > Settings</string>
    <string name="settingchangeparentsemail">Change Parents Email</string>
    <string name ="settingchnageusername">Change your Username</string>
    <string name ="settingpassword">Change your password</string>
    <string name ="settingchangeprefereclanguage">Change your prefered language</string>
    <string name ="settingstatistics">See Statistics</string>
    <string name ="changeFont">Change Font - size</string>
    <string name ="settingRepeort">Report a bug or post a complaint</string>
    <string name ="settingPost">Post</string>
    <string name ="settingadd" translatable="false">+</string>
    <string name ="settingminus" translatable="false">-</string>
<!-- Change User Dialog-->
    <string name ="pickalang" >Pick a language</string>

</resources>
